Cleanup && fixed compile error